feat: сверстать секцию profile

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         <ul class="profile__person">
           <li class="profile__avatar"></li>
           <li class="profile__info">
-            <h1 class="profile__name">Владимир Блинов<button class="profile__edit-button"></button> </h1>
-            <p class="Капитан очень ближнего плавания"></p>
+            <div class="profile__name-container">
+              <h1 class="profile__name">Владимир Блинов</h1>
+              <button class="profile__edit-button"></button>
+            </div>
+            <p class="profile__description">Капитан очень ближнего плавания</p>
           </li>
         </ul>
+        <button class="profile__new-photo-button"></button>
       </section>
 
     </main>
