--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main class="content">
-      <!--Имя пользователя, аватарки, кнопки редактирования профиля и добавления нового контента -->
+      <!-- Секция с именем пользователя, аватаркой, кнопками редактирования профиля и добавления нового контента -->
       <section class="profile">
         <ul class="profile__person">
           <li class="profile__avatar"></li>
@@ -27,6 +27,11 @@
           </li>
         </ul>
         <button class="profile__new-photo-button"></button>
+      </section>
+
+      <!-- Секция с фотографиями профиля-->
+      <section class="content-gallery">
+
       </section>
 
     </main>
