feat: стилизовать одну карточку content-galery

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 
       <!-- Секция с фотографиями профиля-->
       <section class="content-gallery">
-
+        <ul class="content-gallery__cards">
+          <li class="card">
+            <img src="images/Lytkarino-min.jpg" alt="Фотография из Лыткарино" class="card__photo">
+            <div class="card__info">
+              <p class="card__description">Лыткарино</p>
+              <button class="card__like-button"></button>
+            </div>
+          </li>
+        </ul>
       </section>
 
     </main>
