feat: сверстать секцию с фото

--- a/index.html
+++ b/index.html
@@ -33,9 +33,44 @@
       <section class="content-gallery">
         <ul class="content-gallery__cards">
           <li class="card">
-            <img src="images/Lytkarino-min.jpg" alt="Фотография из Лыткарино" class="card__photo">
+            <img src="./images/Lytkarino-min.jpg" alt="Фотография сухого камыша на закате около Лыткаринского карьера" class="card__photo">
             <div class="card__info">
               <p class="card__description">Лыткарино</p>
+              <button class="card__like-button"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/Oreshek-min.jpg" alt="Фотография памятника защитникам крепости Орешек" class="card__photo">
+            <div class="card__info">
+              <p class="card__description">Крепость Орешек</p>
+              <button class="card__like-button"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/Repino-min.jpg" alt="Фотография птицы на пляже около Репино" class="card__photo">
+            <div class="card__info">
+              <p class="card__description">Репино</p>
+              <button class="card__like-button"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/SaintP-min.jpg" alt="Фотография вязанной игрушки на статуе пегаса в Санкт-Петербурге" class="card__photo">
+            <div class="card__info">
+              <p class="card__description">Санкт-Петербург</p>
+              <button class="card__like-button"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/Terney-min.JPG" alt="Фотография скал и моря близ Тернея" class="card__photo">
+            <div class="card__info">
+              <p class="card__description">Терней</p>
+              <button class="card__like-button"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/Vantoviy-min.jpg" alt="Фотография июньского рассвета под Вантовым мостом в Санкт-Петербурге" class="card__photo">
+            <div class="card__info">
+              <p class="card__description">Вантовый мост</p>
               <button class="card__like-button"></button>
             </div>
           </li>
