feat: сверстать подвал

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
           </li>
         </ul>
       </section>
-
     </main>
     
     <footer class="footer">
-      
+      <!--Подвал с копирайтом-->
+        <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
     </footer>
   </div>
 </body>
