feat: сделать адаптив на первом брейкпоинте

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="root">
   <div class="page">
     <header class="header page__header">
-      <img src='./images/logo_mesto.svg' alt="Логотип соцсети Место">
+      <img src='./images/logo_mesto.svg' alt="Логотип соцсети Место" class="logo">
     </header>
 
     <main class="content">
