fix: Исправить отсутствие li в списке

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <!--ПопАп с изменением имени-->
     <form class="edit-form">
       <ul class="edit-form__form-container">
-        <h2 class="edit-form__form-description">Редактировать профиль</h2>
-        <input type="text" class="edit-form__profile-name" placeholder="Имя" value="" required>
-        <input type="text" class="edit-form__profile-description" placeholder="Описание" value="" required>
-        <button type="submit" class="edit-form__submit-button">Сохранить</button>
-        <button type="button" class="edit-form__close-button"></button>
+        <li><h2 class="edit-form__form-description">Редактировать профиль</h2></li>
+        <li><input type="text" class="edit-form__profile-name" placeholder="Имя" value="" required></li>
+        <li><input type="text" class="edit-form__profile-description" placeholder="Описание" value="" required></li>
+        <li><button type="submit" class="edit-form__submit-button">Сохранить</button></li>
+        <li><button type="button" class="edit-form__close-button"></button></li>
       </ul>
     </form>
   </div>
