fix: убрать список в profile

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <main class="content">
       <!-- Секция с именем пользователя, аватаркой, кнопками редактирования профиля и добавления нового контента -->
       <section class="profile">
-        <ul class="profile__person">
-          <li class="profile__avatar"></li>
-          <li class="profile__info">
+        <div class="profile__person">
+          <img src="./images/avatar.JPG" alt="Фотография профиля" class="profile__avatar"></img>
+          <div class="profile__info">
             <div class="profile__name-container">
               <h1 class="profile__name">Владимир Блинов</h1>
               <button type="button" class="profile__edit-button"></button>
             </div>
             <p class="profile__description">Капитан очень ближнего плавания</p>
-          </li>
-        </ul>
+          </div>
+        </div>
         <button type="button" class="profile__new-photo-button"></button>
       </section>
 
