--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
           <li class="card">
             <img src="./images/Lytkarino-min.jpg" alt="Фотография сухого камыша на закате около Лыткаринского карьера" class="card__photo">
             <div class="card__info">
-              <p class="card__description">Лыткарино</p>
+              <h2 class="card__description">Лыткарино</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/Oreshek-min.jpg" alt="Фотография памятника защитникам крепости Орешек" class="card__photo">
             <div class="card__info">
-              <p class="card__description">Крепость Орешек</p>
+              <h2 class="card__description">Крепость Орешек</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/Repino-min.jpg" alt="Фотография птицы на пляже около Репино" class="card__photo">
             <div class="card__info">
-              <p class="card__description">Репино</p>
+              <h2 class="card__description">Репино</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/SaintP-min.jpg" alt="Фотография вязанной игрушки на статуе пегаса в Санкт-Петербурге" class="card__photo">
             <div class="card__info">
-              <p class="card__description">Санкт-Петербург</p>
+              <h2 class="card__description">Санкт-Петербург</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/Terney-min.JPG" alt="Фотография скал и моря близ Тернея" class="card__photo">
             <div class="card__info">
-              <p class="card__description">Терней</p>
+              <h2 class="card__description">Терней</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
           </li>
           <li class="card">
             <img src="./images/Vantoviy-min.jpg" alt="Фотография июньского рассвета под Вантовым мостом в Санкт-Петербурге" class="card__photo">
             <div class="card__info">
-              <p class="card__description">Вантовый мост</p>
+              <h2 class="card__description">Вантовый мост</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
           </li>
@@ -80,7 +80,7 @@
     
     <footer class="footer">
       <!--Подвал с копирайтом-->
-        <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
+        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
     <!--ПопАп с изменением имени-->
