--- a/index.html
+++ b/index.html
@@ -77,23 +77,22 @@
         </ul>
       </section>
     </main>
-    
+
     <footer class="footer">
       <!--Подвал с копирайтом-->
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
     <!--ПопАп с изменением имени-->
-    <div class="edit-form">
-      <form name="editProfileForm" class="edit-form__form-container">
-        <h2 class="edit-form__form-description">Редактировать профиль</h2>
-        <input type="text" class="edit-form__profile-name" placeholder="Имя" value="" required>
-        <input type="text" class="edit-form__profile-description" placeholder="Описание" value="" required>
-        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Сохранить</button>
-        <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
-      </form>
-    </div>
+  <div class="edit-form">
+    <form name="editProfileForm" class="edit-form__form-container">
+      <h2 class="edit-form__form-description">Редактировать профиль</h2>
+      <input type="text" name="editProfileName" class="edit-form__profile-info-input edit-form__profile-info-input_type_name" placeholder="Имя" value="" required>
+      <input type="text" name="editProfileDescription" class="edit-form__profile-info-input edit-form__profile-info-input_type_description" placeholder="Описание" value="" required>
+      <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Сохранить</button>
+      <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
+    </form>
   </div>
-  <script src="./scripts/popup.js"></script> 
+  <script src="./scripts/popup.js"></script>
 </body>
 </html>
