--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
         <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
       </form>
     </div>
+
+    <!--ПопАп с добавлением фото-->
+    <div class="edit-form">
+      <form name="editProfileForm" class="edit-form__form-container">
+        <h2 class="edit-form__form-description">Новое место</h2>
+        <input type="text" name="editProfileName" class="edit-form__profile-info-input edit-form__profile-info-input_type_name" placeholder="Название" value="" required>
+        <input type="text" name="editProfileDescription" class="edit-form__profile-info-input edit-form__profile-info-input_type_description" placeholder="Ссылка на картинку" value="" required>
+        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Создать</button>
+        <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
+      </form>
+    </div>
+
   </div>
   <script src="./scripts/popup.js"></script>
 </body>
