--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <h2 class="card__description">Лыткарино</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
+            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
           </li>
           <li class="card">
             <img src="./images/Oreshek-min.jpg" alt="Фотография памятника защитникам крепости Орешек" class="card__photo">
@@ -45,6 +46,7 @@
               <h2 class="card__description">Крепость Орешек</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
+            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
           </li>
           <li class="card">
             <img src="./images/Repino-min.jpg" alt="Фотография птицы на пляже около Репино" class="card__photo">
@@ -52,6 +54,7 @@
               <h2 class="card__description">Репино</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
+            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
           </li>
           <li class="card">
             <img src="./images/SaintP-min.jpg" alt="Фотография вязанной игрушки на статуе пегаса в Санкт-Петербурге" class="card__photo">
@@ -59,6 +62,7 @@
               <h2 class="card__description">Санкт-Петербург</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
+            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
           </li>
           <li class="card">
             <img src="./images/Terney-min.JPG" alt="Фотография скал и моря близ Тернея" class="card__photo">
@@ -66,6 +70,7 @@
               <h2 class="card__description">Терней</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
+            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
           </li>
           <li class="card">
             <img src="./images/Vantoviy-min.jpg" alt="Фотография июньского рассвета под Вантовым мостом в Санкт-Петербурге" class="card__photo">
@@ -73,6 +78,7 @@
               <h2 class="card__description">Вантовый мост</h2>
               <button aria-label="Нравится" type="button" class="card__like-button"></button>
             </div>
+            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
           </li>
         </ul>
       </section>
