feat: сделать попап с картинкой внутри

--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
       </form>
     </div>
 
+    <!--ПопАп с Фото на весь экран-->
+    <div class="image-popup">
+    <figure class="image-popup__container">
+      <img src="images/Terney-min.JPG" alt="крупное изображение карточки" class="image-popup__picture">
+      <figcaption class="image-popup__description">Терней</figcaption>
+      <button aria-label="Закрыть" type="button" class="image-popup__close-button"></button>
+    </figure>
+  </div>
+
   </div>
   <script src="./scripts/popup.js"></script>
 </body>
