--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div class="edit-form">
       <form name="editProfileForm" class="edit-form__form-container">
         <h2 class="edit-form__form-description">Редактировать профиль</h2>
-        <input type="text" name="editProfileName" class="edit-form__profile-info-input edit-form__profile-info-input_type_name" placeholder="Имя" value="" required>
-        <input type="text" name="editProfileDescription" class="edit-form__profile-info-input edit-form__profile-info-input_type_description" placeholder="Описание" value="" required>
+        <input type="text" name="editProfileName" class="edit-form__info-input edit-form__info-input_type_name" placeholder="Имя" value="" required>
+        <input type="text" name="editProfileDescription" class="edit-form__info-input edit-form__info-input_type_description" placeholder="Описание" value="" required>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Сохранить</button>
         <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
       </form>
@@ -104,8 +104,8 @@
     <div class="edit-form">
       <form name="editProfileForm" class="edit-form__form-container">
         <h2 class="edit-form__form-description">Новое место</h2>
-        <input type="text" name="editProfileName" class="edit-form__profile-info-input edit-form__profile-info-input_type_name" placeholder="Название" value="" required>
-        <input type="text" name="editProfileDescription" class="edit-form__profile-info-input edit-form__profile-info-input_type_description" placeholder="Ссылка на картинку" value="" required>
+        <input type="text" name="editPlaceName" class="edit-form__info-input edit-form__info-input_type_name" placeholder="Название" value="" required>
+        <input type="text" name="editLinkPlace" class="edit-form__info-input edit-form__info-input_type_description" placeholder="Ссылка на картинку" value="" required>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Создать</button>
         <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
       </form>
