подготовить фото карточек в js

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <!--ПопАп с Фото на весь экран-->
     <div class="image-popup">
     <figure class="image-popup__container">
-      <img src="images/Terney-min.JPG" alt="крупное изображение карточки" class="image-popup__picture">
-      <figcaption class="image-popup__description">Терней</figcaption>
+      <img src="https://sun9-65.userapi.com/impg/PPWM1zcTf4CaUaqYEExjfgUEokOtZRHTGN2X3g/CEHzEWwZJ8c.jpg?size=2560x1707&quality=96&sign=52fbfed632c675c51876067bf25f685d&type=album" alt="крупное изображение карточки" class="image-popup__picture">
+      <figcaption class="image-popup__description">Вантовый мост</figcaption>
       <button aria-label="Закрыть" type="button" class="image-popup__close-button"></button>
     </figure>
   </div>
