--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <h2 class="edit-form__form-description">Редактировать профиль</h2>
         <input type="text" name="editProfileName" class="edit-form__info-input edit-form__info-input_type_name" placeholder="Имя" value="" required>
         <input type="text" name="editProfileDescription" class="edit-form__info-input edit-form__info-input_type_description" placeholder="Описание" value="" required>
-        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Сохранить</button>
-        <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
+        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_profile">Сохранить</button>
+        <button aria-label="Закрыть" type="button" class="edit-form__close-button edit-form__close-button_type_profile"></button>
       </form>
     </div>
 
@@ -106,8 +106,8 @@
         <h2 class="edit-form__form-description">Новое место</h2>
         <input type="text" name="editPlaceName" class="edit-form__info-input edit-form__info-input_type_place" placeholder="Название" value="" required>
         <input type="text" name="editLinkPlace" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на картинку" value="" required>
-        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button">Создать</button>
-        <button aria-label="Закрыть" type="button" class="edit-form__close-button"></button>
+        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
+        <button aria-label="Закрыть" type="button" class="edit-form__close-button edit-form__close-button_type_place"></button>
       </form>
     </div>
 
