feat: добавить карточку через кнопку

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!--ПопАп с добавлением фото-->
     <div class="edit-form edit-form_type_place">
       <form name="editProfileForm" class="edit-form__form-container">
-        <h2 class="edit-form__form-description">Новое место</h2>
+        <h2 class="edit-form__form-description edit-form__form-description">Новое место</h2>
         <input type="text" name="editPlaceName" class="edit-form__info-input edit-form__info-input_type_place" placeholder="Название" value="" required>
         <input type="text" name="editLinkPlace" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на картинку" value="" required>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
