fix: почистить код

--- a/index.html
+++ b/index.html
@@ -31,56 +31,7 @@
 
       <!-- Секция с фотографиями профиля-->
       <section class="content-gallery">
-        <ul class="content-gallery__cards">
-          <!--<li class="card">
-            <img src="./images/Lytkarino-min.jpg" alt="Фотография сухого камыша на закате около Лыткаринского карьера" class="card__photo">
-            <div class="card__info">
-              <h2 class="card__description">Лыткарино</h2>
-              <button aria-label="Нравится" type="button" class="card__like-button"></button>
-            </div>
-            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
-          </li>
-          <li class="card">
-            <img src="./images/Oreshek-min.jpg" alt="Фотография памятника защитникам крепости Орешек" class="card__photo">
-            <div class="card__info">
-              <h2 class="card__description">Крепость Орешек</h2>
-              <button aria-label="Нравится" type="button" class="card__like-button"></button>
-            </div>
-            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
-          </li>
-          <li class="card">
-            <img src="./images/Repino-min.jpg" alt="Фотография птицы на пляже около Репино" class="card__photo">
-            <div class="card__info">
-              <h2 class="card__description">Репино</h2>
-              <button aria-label="Нравится" type="button" class="card__like-button"></button>
-            </div>
-            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
-          </li>
-          <li class="card">
-            <img src="./images/SaintP-min.jpg" alt="Фотография вязанной игрушки на статуе пегаса в Санкт-Петербурге" class="card__photo">
-            <div class="card__info">
-              <h2 class="card__description">Санкт-Петербург</h2>
-              <button aria-label="Нравится" type="button" class="card__like-button"></button>
-            </div>
-            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
-          </li>
-          <li class="card">
-            <img src="./images/Terney-min.JPG" alt="Фотография скал и моря близ Тернея" class="card__photo">
-            <div class="card__info">
-              <h2 class="card__description">Терней</h2>
-              <button aria-label="Нравится" type="button" class="card__like-button"></button>
-            </div>
-            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
-          </li>
-          <li class="card">
-            <img src="./images/Vantoviy-min.jpg" alt="Фотография июньского рассвета под Вантовым мостом в Санкт-Петербурге" class="card__photo">
-            <div class="card__info">
-              <h2 class="card__description">Вантовый мост</h2>
-              <button aria-label="Нравится" type="button" class="card__like-button"></button>
-            </div>
-            <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
-          </li> -->
-        </ul>
+        <ul class="content-gallery__cards"></ul>
       </section>
     </main>
 
@@ -114,7 +65,7 @@
     <!--ПопАп с Фото на весь экран-->
     <div class="image-popup">
     <figure class="image-popup__container">
-      <img src="https://sun9-65.userapi.com/impg/PPWM1zcTf4CaUaqYEExjfgUEokOtZRHTGN2X3g/CEHzEWwZJ8c.jpg?size=2560x1707&quality=96&sign=52fbfed632c675c51876067bf25f685d&type=album" alt="крупное изображение карточки" class="image-popup__picture">
+      <img src="#" alt="#" class="image-popup__picture">
       <figcaption class="image-popup__description">Вантовый мост</figcaption>
       <button aria-label="Закрыть" type="button" class="image-popup__close-button"></button>
     </figure>
