--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
     <!--ПопАп с Фото на весь экран-->
     <div class="image-popup">
-    <figure class="image-popup__container">
+    <div class="image-popup__container">
       <img src="#" alt="#" class="image-popup__picture">
-      <figcaption class="image-popup__description">Вантовый мост</figcaption>
+      <p class="image-popup__description">Вантовый мост</p>
       <button aria-label="Закрыть" type="button" class="image-popup__close-button"></button>
-    </figure>
+    </div>
   </div>
 
   </div>
