--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
     </li>
   </template>
+  <script src="./scripts/initial-cards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
