fix: изменить функции openPopup и closePopup. Добавить новый класс

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </footer>
 
     <!--ПопАп с изменением имени-->
-    <div class="edit-form edit-form_type_profile">
+    <div class="popup edit-form edit-form_type_profile">
       <form name="editProfileForm" class="edit-form__form-container">
         <h2 class="edit-form__form-description">Редактировать профиль</h2>
         <input type="text" name="editProfileName" class="edit-form__info-input edit-form__info-input_type_name" placeholder="Имя" value="" required>
@@ -52,7 +52,7 @@
     </div>
 
     <!--ПопАп с добавлением фото-->
-    <div class="edit-form edit-form_type_place">
+    <div class="popup edit-form edit-form_type_place">
       <form name="editProfileForm" class="edit-form__form-container">
         <h2 class="edit-form__form-description edit-form__form-description">Новое место</h2>
         <input type="text" name="editPlaceName" class="edit-form__info-input edit-form__info-input_type_place" placeholder="Название" value="" required>
@@ -63,7 +63,7 @@
     </div>
 
     <!--ПопАп с Фото на весь экран-->
-    <div class="image-popup">
+    <div class="popup image-popup">
     <div class="image-popup__container">
       <img src="#" alt="#" class="image-popup__picture">
       <p class="image-popup__description">Вантовый мост</p>
