--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="popup edit-form edit-form_type_profile">
       <form name="editProfileForm" class="edit-form__form-container" novalidate>
         <h2 class="edit-form__form-description">Редактировать профиль</h2>
-        <input type="text" name="editProfileName" class="edit-form__info-input edit-form__info-input_type_name" placeholder="Имя" value="" required minlength="2" maxlength="40">
-        <span class="edit-form__error-text"></span>
-        <input type="text" name="editProfileDescription" class="edit-form__info-input edit-form__info-input_type_description" placeholder="Описание" value="" required minlength="2" maxlength="200">
-        <span class="edit-form__error-text"></span>
+        <input type="text" name="editProfileName" id="name-input" class="edit-form__info-input edit-form__info-input_type_name" placeholder="Имя" value="" required minlength="2" maxlength="40">
+        <span class="edit-form__error-text name-input-error"></span>
+        <input type="text" name="editProfileDescription" id="description-input" class="edit-form__info-input edit-form__info-input_type_description" placeholder="Описание" value="" required minlength="2" maxlength="200">
+        <span class="edit-form__error-text description-input-error"></span>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_profile">Сохранить</button>
         <button aria-label="Закрыть" type="button" class="edit-form__close-button edit-form__close-button_type_profile"></button>
       </form>
@@ -57,10 +57,10 @@
     <div class="popup edit-form edit-form_type_place">
       <form name="editProfileForm" class="edit-form__form-container" novalidate>
         <h2 class="edit-form__form-description edit-form__form-description">Новое место</h2>
-        <input type="text" name="editPlaceName" class="edit-form__info-input edit-form__info-input_type_place" placeholder="Название" value="" required minlength="2" maxlength="30">
-        <span class="edit-form__error-text">Каждый может, а ты нет</span>
-        <input type="url" name="editLinkPlace" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на картинку" value="" required>
-        <span class="edit-form__error-text">Каждый может, а ты нет</span>
+        <input type="text" name="editPlaceName" id="place-input" class="edit-form__info-input edit-form__info-input_type_place" placeholder="Название" value="" required minlength="2" maxlength="30">
+        <span class="edit-form__error-text place-input-error"></span>
+        <input type="url" name="editLinkPlace" id="url-input" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на картинку" value="" required>
+        <span class="edit-form__error-text url-input-error"></span>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
         <button aria-label="Закрыть" type="button" class="edit-form__close-button edit-form__close-button_type_place"></button>
       </form>
