feat: создать первую версию класса Card

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
     </li>
   </template>
+  <script src="./scripts/Card.js"></script>
   <script src="./scripts/initial-cards.js"></script>
   <script src="./scripts/validate.js"></script>
   <script src="./scripts/index.js"></script>
