--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     </li>
   </template>
   <script src="./scripts/Card.js"></script>
+  <script src="./scripts/FormValidator.js"></script>
   <script src="./scripts/initial-cards.js"></script>
   <script src="./scripts/validate.js"></script>
   <script src="./scripts/index.js"></script>
