--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
       <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
     </li>
   </template>
-  <script type="module" src="./scripts/Card.js"></script>
-  <script type="module" src="./scripts/FormValidator.js"></script>
-  <script type="module" src="./scripts/initial-cards.js"></script>
-  <script type="module" src="./scripts/validate.js"></script>
+  <script type="module" src="scripts/components/Card.js"></script>
+  <script type="module" src="scripts/components/FormValidator.js"></script>
+  <script type="module" src="scripts/utils/initial-cards.js"></script>
+  <script type="module" src="scripts/utils/validate.js"></script>
   <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
