--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <input type="text" name="editProfileDescription" id="description-input" class="edit-form__info-input edit-form__info-input_type_description" placeholder="Описание" value="" required minlength="2" maxlength="200">
         <span class="edit-form__error-text description-input-error"></span>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_profile">Сохранить</button>
-        <button aria-label="Закрыть" type="button" class="edit-form__close-button edit-form__close-button_type_profile"></button>
+        <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_profile"></button>
       </form>
     </div>
 
@@ -62,7 +62,7 @@
         <input type="url" name="editLinkPlace" id="url-input" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на картинку" value="" required>
         <span class="edit-form__error-text url-input-error"></span>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
-        <button aria-label="Закрыть" type="button" class="edit-form__close-button edit-form__close-button_type_place"></button>
+        <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_place"></button>
       </form>
     </div>
 
@@ -71,7 +71,7 @@
     <div class="image-popup__container">
       <img src="#" alt="#" class="image-popup__picture">
       <p class="image-popup__description">Вантовый мост</p>
-      <button aria-label="Закрыть" type="button" class="image-popup__close-button"></button>
+      <button aria-label="Закрыть" type="button" class="popup__close-btn image-popup__close-button"></button>
     </div>
   </div>
 
