--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
 <body class="root">
   <div class="page">
     <header class="header page__header">
-      <img src='./images/logo_mesto.svg' alt="Логотип соцсети Место" class="logo">
+      <img src=<%=require('./images/logo_mesto.svg')%> alt="Логотип соцсети Место" class="logo">
     </header>
 
     <main class="content">
       <!-- Секция с именем пользователя, аватаркой, кнопками редактирования профиля и добавления нового контента -->
       <section class="profile">
         <div class="profile__person">
-          <img src="./images/avatar.JPG" alt="Фотография профиля" class="profile__avatar">
+          <img src=<%=require('./images/avatar.jpg')%> alt="Фотография профиля" class="profile__avatar">
           <div class="profile__info">
             <div class="profile__name-container">
               <h1 class="profile__name">Владимир Блинов</h1>
