--- a/src/index.html
+++ b/src/index.html
@@ -57,12 +57,21 @@
     <!--ПопАп с добавлением фото-->
     <div class="popup edit-form edit-form_type_place">
       <form name="editProfileForm" class="edit-form__form-container" novalidate>
-        <h2 class="edit-form__form-description edit-form__form-description">Новое место</h2>
+        <h2 class="edit-form__form-description">Новое место</h2>
         <input type="text" name="editPlaceName" id="place-input" class="edit-form__info-input edit-form__info-input_type_place" placeholder="Название" value="" required minlength="2" maxlength="30">
         <span class="edit-form__error-text place-input-error"></span>
         <input type="url" name="editLinkPlace" id="url-input" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на картинку" value="" required>
         <span class="edit-form__error-text url-input-error"></span>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
+        <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_place"></button>
+      </form>
+    </div>
+
+    <!--ПопАп с подтверждением удаления карточки-->
+    <div class="popup edit-form edit-form_type_delete">
+      <form name="editProfileDelete" class="edit-form__form-container" novalidate>
+        <h2 class="edit-form__form-description edit-form__form-description_type_delete">Вы уверены?</h2>
+        <button aria-label="Удалить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_delete">Да</button>
         <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_place"></button>
       </form>
     </div>
