--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,17 @@
       </form>
     </div>
 
+    <!--ПопАп редактирования аватарки-->
+    <div class="popup edit-form edit-form_type_place">
+      <form name="editProfileForm" class="edit-form__form-container" novalidate>
+        <h2 class="edit-form__form-description">Обновить аватар</h2>
+        <input type="url" name="editLinkAvatar" id="url-input-avatar" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на аватар" value="" required>
+        <span class="edit-form__error-text url-input-error"></span>
+        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
+        <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_place"></button>
+      </form>
+    </div>
+
     <!--ПопАп с Фото на весь экран-->
     <div class="popup image-popup">
     <div class="image-popup__container">
