--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,10 @@
       <img src="#" alt="#" class="card__photo">
       <div class="card__info">
         <h2 class="card__description"></h2>
-        <button aria-label="Нравится" type="button" class="card__like-button"></button>
+        <div class="card__like-container">
+          <button aria-label="Нравится" type="button" class="card__like-button"></button>
+          <p class="card__like-counter">0</p>
+        </div>
       </div>
       <button aria-label="Удалить место" type="button" class="card__delete-button"></button>
     </li>
