--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,8 @@
     </div>
 
     <!--ПопАп редактирования аватарки-->
-    <div class="popup edit-form edit-form_type_place">
-      <form name="editProfileForm" class="edit-form__form-container" novalidate>
+    <div class="popup edit-form edit-form_type_avatar">
+      <form name="editAvatarForm" class="edit-form__form-container" novalidate>
         <h2 class="edit-form__form-description">Обновить аватар</h2>
         <input type="url" name="editLinkAvatar" id="url-input-avatar" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на аватар" value="" required>
         <span class="edit-form__error-text url-input-error"></span>
