fix: починил валидацию попапа аватары

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
       <form name="editAvatarForm" class="edit-form__form-container" novalidate>
         <h2 class="edit-form__form-description">Обновить аватар</h2>
         <input type="url" name="editLinkAvatar" id="url-input-avatar" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на аватар" value="" required>
-        <span class="edit-form__error-text url-input-error"></span>
+        <span class="edit-form__error-text url-input-avatar-error"></span>
         <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
         <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_place"></button>
       </form>
