--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
         <h2 class="edit-form__form-description">Обновить аватар</h2>
         <input type="url" name="editLinkAvatar" id="url-input-avatar" class="edit-form__info-input edit-form__info-input_type_link" placeholder="Ссылка на аватар" value="" required>
         <span class="edit-form__error-text url-input-avatar-error"></span>
-        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Создать</button>
+        <button aria-label="Сохранить" type="submit" class="edit-form__submit-button edit-form__submit-button_type_place">Сохранить</button>
         <button aria-label="Закрыть" type="button" class="popup__close-btn edit-form__close-button edit-form__close-button_type_place"></button>
       </form>
     </div>
